force-app/main/default/objects/Sponsorship_Need__c/Sponsorship_Need__c.object-meta.xml
<CustomObject>
    <label>Sponsorship Need</label>
    <nameField>
        <label>Sponsorship Need Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsorship Need</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>