force-app/main/default/objects/Sponsorship_Need__c/fields/Allow_Installment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Allow_Installment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If installment payment plans are allowed</inlineHelpText>
    <label>Allow Installment Plan</label>
    <type>Checkbox</type>
</CustomField>