force-app/main/default/objects/Sponsorship_Need__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <label>Amount Requested_</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>