force-app/main/default/objects/Sponsorship_Need__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <inlineHelpText>Sponsorship need deadline, after which it is no longer available.</inlineHelpText>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>