force-app/main/default/objects/Sponsorship_Need__c/fields/Recurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Count__c</fullName>
    <inlineHelpText>How many times this need reoccurs, leave blank for indefinite</inlineHelpText>
    <label>Recurrence Count</label>
    <type>Date</type>
</CustomField>