force-app/main/default/objects/Sponsorship_Need__c/fields/Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Type__c</fullName>
    <label>Recurrence Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
                <default>true</default>
                <label>One-Time</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>