force-app/main/default/objects/Sponsorship_Need__c/fields/Sponsorable__c.field-meta.xml
<CustomField>
    <fullName>Sponsorable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsorable</label>
    <referenceTo>Sponsorable__c</referenceTo>
    <relationshipLabel>Sponsorship Need</relationshipLabel>
    <relationshipName>Sponsorship_Need</relationshipName>
    <type>Lookup</type>
</CustomField>