force-app/main/default/objects/Sponsorship_Need__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Customize this picklist to allow for grouping your sponsorship needs.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>